elastic-search/overlays/staging/kibana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: elastic-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "kibana.kitetsu.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kibana-kb-http
          port: 5601
